--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,10 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["development"]
+    "customConditions": ["development"],
+    "baseUrl": ".",
+    "paths": {
+      "@mp-hr/shared-types": ["shared-types/src/index.ts"]
+    }
   }
 }
