--- a/shared-types/tsconfig.json
+++ b/shared-types/tsconfig.json
@@ -1,7 +1,10 @@
 {
-  "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "module": "nodenext"
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "target": "es2020",
+    "strict": true,
+    "skipLibCheck": true
   },
   "files": [],
   "include": [],
