--- a/shared-types/tsconfig.lib.json
+++ b/shared-types/tsconfig.lib.json
@@ -1,7 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "nodenext",
+    "module": "commonjs",
+    "moduleResolution": "node", 
+    "target": "es2020",
     "outDir": "../dist/out-tsc",
     "declaration": true,
     "types": ["node"]
