share busness logic between rn and react app

--- a/nx.json
+++ b/nx.json
@@ -97,7 +97,8 @@
       },
       "library": {
         "style": "css",
-        "linter": "eslint"
+        "linter": "eslint",
+        "unitTestRunner": "jest"
       }
     }
   },
