--- a/shared-types/tsconfig.json
+++ b/shared-types/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "composite": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es2020",
